SVN
-------------------------------

JDO:   Resolved issue CASTOR-1812 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with SQLException: Column Index out of range.
       Details: http://jira.codehaus.org/browse/CASTOR-1812
       (Ralf - 20070303)

Gen:   Resolved issue CASTOR-1886 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with ClassChoice() creation in MappingFileSourceFactory.
       Details: http://jira.codehaus.org/browse/CASTOR-1886
       (Werner - 20070228)

Gen:   Resolved issue CASTOR-1880 using contribution from Steven Dolg [stevendolg@gmx.at]
       Fixed problem with illegal field name suffix 'Choice'.
       Details: http://jira.codehaus.org/browse/CASTOR-1880
       (Werner - 20070223)

Gen:   Resolved issue CASTOR-1882 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with IDREF validation with 'forward references'.
       Details: http://jira.codehaus.org/browse/CASTOR-1882
       (Werner - 20070223)

Gen:   Resolved issue CASTOR-1877 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with build scripts (Windows) related to blanks as part of ENV variables.
       Details: http://jira.codehaus.org/browse/CASTOR-1877
       (Werner - 20070223)

XML:   Resolved issue CASTOR-1879 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added 'setClass(Class)' method to Unmarshaller to allow sepecification of an 'expected' class.
       Details: http://jira.codehaus.org/browse/CASTOR-1879
       (Werner - 20070223)

JDO:   Resolved issue CASTOR-1875 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added new command line parameter 'nameConflictStrategy' to SourceGeneratorMain.
       Details: http://jira.codehaus.org/browse/CASTOR-1875
       (Ralf - 20070221)
       
JDO:   Resolved issue CASTOR-1787 using contribution from Werner Guttmann [werner.guttmann@gmx.net]