@@ -1,0 +1,21 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--Sample XML file generated by XMLSpy v2006 sp2 U
+	(http://www.altova.com)-->
+<singleUnderlyer
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<bond id="ID000000">
+		<instrumentId instrumentIdScheme="http://www.altova.com">
+			normalizedString
+		</instrumentId>
+
+		<description>String</description>
+		<issuerName>String</issuerName>
+
+		<couponRate>3.1415926535897932384626433832795</couponRate>
+		<maturity>1967-08-13</maturity>
+		<parValue>3.1415926535897932384626433832795</parValue>
+
+		<faceAmount>3.1415926535897932384626433832795</faceAmount>
+	</bond>
+	<openUnits>3.1415926535897932384626433832795</openUnits>
+</singleUnderlyer>
