@@ -1,0 +1,18 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--Sample XML file generated by XMLSpy v2006 sp2 U
+	(http://www.altova.com)-->
+<singleUnderlyer
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+	<future id="ID000002">
+		<instrumentId instrumentIdScheme="http://www.altova.com">
+			normalizedString
+		</instrumentId>
+
+		<description>String</description>
+		<multiplier>-0</multiplier>
+
+		<futureContractReference>String</futureContractReference>
+		<maturity>1967-08-13</maturity>
+	</future>
+	<openUnits>3.1415926535897932384626433832795</openUnits>
+</singleUnderlyer>
