@@ -1,6 +1,11 @@
 SVN
 -------------------------------
 
+Gen:   Resolved issue CASTOR-1893 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
+       Fixed problem with sequence validation and substitution groups.
+       Details: http://jira.codehaus.org/browse/CASTOR-1893
+       (Werner - 20070304)
+
 JDO:   Resolved issue CASTOR-1812 using contribution from Steven Dolg [stevendolg@gmx.at]
        Fixed problem with SQLException: Column Index out of range.
        Details: http://jira.codehaus.org/browse/CASTOR-1812
